System generated commit, for syncing changes with remote after git pull

--- a/application.json
+++ b/application.json
@@ -28,6 +28,7 @@
   "publishedAppLayout": {
     "type": "DESKTOP"
   },
+  "unpublishedCustomJSLibs": [],
   "evaluationVersion": 2,
   "applicationVersion": 1,
   "isManualUpdate": false,
