--- a/application.json
+++ b/application.json
@@ -29,6 +29,7 @@
     "type": "DESKTOP"
   },
   "unpublishedCustomJSLibs": [],
+  "publishedCustomJSLibs": [],
   "evaluationVersion": 2,
   "applicationVersion": 1,
   "isManualUpdate": false,
