--- a/application.json
+++ b/application.json
@@ -1,6 +1,10 @@
 {
   "pages": [
     {
+      "id": "1 Track Applications",
+      "isDefault": false
+    },
+    {
       "id": "Page1",
       "isDefault": true
     }
@@ -8,8 +12,8 @@
   "viewMode": false,
   "appIsExample": false,
   "unreadCommentThreads": 0,
-  "color": "#FFEFDB",
-  "icon": "frame",
+  "color": "#C7F3E3",
+  "icon": "moon",
   "evaluationVersion": 2,
   "applicationVersion": 1,
   "isManualUpdate": false,
